--- a/css/style.css
+++ b/css/style.css
@@ -1,169 +1,180 @@
+@charset "UTF-8";
 /*RESET CSS*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-a , li {
-    display: inline-block;
-    font-style: none;
-    list-style: none;
-    text-decoration: none;
+a, li {
+  color: black;
+  font-size: large;
+  display: inline-block;
+  font-style: italic;
+  list-style: none;
+  text-decoration: none;
+  padding: 2px;
 }
 
 /*======================================*/
 /*INDEX*/
 /*======================================*/
-
 /*HEADER Y NAV*/
 header {
-    display: flex;
-    justify-content: space-between; /* Distribuye los elementos a lo largo del eje principal (horizontal) */
-    align-items: center; /* Alinea los elementos al centro del eje transversal (vertical) */
-    padding: 10px; /* Añade algún relleno para mayor espacio alrededor del logo y la navegación */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around; /* Distribuye los elementos a lo largo del eje principal (horizontal) */
+  align-items: center; /* Alinea los elementos al centro del eje transversal (vertical) */
+  padding: 10px; /* Añade algún relleno para mayor espacio alrededor del logo y la navegación */
 }
 
 header img {
-    width: 200px; /* Ajusta el tamaño del logo según tus preferencias */
-    height: auto; /* Mantiene la proporción del logo */
-}
-header {
-    height: 100px;
-    text-align: center;
-    background-color: #FF6347; /* Fondo en rojo tomate */
+  width: 200px; /* Ajusta el tamaño del logo según tus preferencias */
+  height: auto; /* Mantiene la proporción del logo */
 }
 
-header nav ul li a {
-    font-size: 20px;
-    margin-left: 10px;
+header {
+  height: 100px;
+  text-align: center;
+  background-color: #FF6347; /* Fondo en rojo tomate */
+}
+
+header nav ul li a:hover {
+  color: bisque;
+  font-size: 15px;
+  margin-left: 10px;
 }
 
 /*SECCION BANNER*/
-
 body {
-    /* Propiedades para la imagen de fondo */
-    background-image: url('../Images/Banner.jpg'); 
-    background-size: cover; /* Ajusta la imagen al tamaño del contenedor */
-    background-position: center; /* Centra la imagen en el contenedor */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  /* Propiedades para la imagen de fondo */
+  background-image: url("../Images/Banner.jpg");
+  background-size: cover; /* Ajusta la imagen al tamaño del contenedor */
+  background-position: center; /* Centra la imagen en el contenedor */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
 /*Bienvenida de la pagina*/
 .banner_titulo {
-    position: relative;
-    top: 50%; /* Posiciona el título en la mitad superior del contenedor */
-    left: 50%; /* Centra el título horizontalmente en el contenedor */
-    transform: translate(-50%, -50%); /* Centra el título verticalmente y horizontalmente */
-    color: #F5DEB3; /* Color del texto */
-    text-align: center; /* Alinea el texto al centro */
-    text-shadow: 2px 2px 0 #333 /* Sombreado del texto */
+  font-family: "Roboto Slab", sans-serif;
+  position: relative;
+  top: 50%; /* Posiciona el título en la mitad superior del contenedor */
+  left: 50%; /* Centra el título horizontalmente en el contenedor */
+  transform: translate(-50%, 20%); /* Centra el título verticalmente y horizontalmente */
+  color: #F5DEB3; /* Color del texto */
+  text-align: center; /* Alinea el texto al centro */
+  text-shadow: 5px 5px 10px black;
 }
-.nuestrasPizzas {
-    color: #F5DEB3;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra horizontalmente los elementos */
-    justify-content: center; /* Centra verticalmente los elementos */
-    text-align: center; /* Centra el texto dentro de cada elemento */
 
+.nuestrasPizzas {
+  color: #F5DEB3;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra horizontalmente los elementos */
+  justify-content: center; /* Centra verticalmente los elementos */
+  text-align: center; /* Centra el texto dentro de cada elemento */
 }
 
 /*Menu de pizzas*/
-
 .cartaPizzzas {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .imagenPizza, .textoPizza {
-    color: #6B8E23;
-    width: 400px; /* Ancho deseado para cada carta de receta */
-    margin: 25px; /* Espacio entre las cartas */
-    text-align: center;
+  font-size: x-large;
+  text-shadow: #333;
+  background-color: rgba(0, 0, 0, 0.421);
+  color: #6B8E23;
+  width: 350px; /* Ancho deseado para cada carta de receta */
+  height: auto;
+  margin: 20px; /* Espacio entre las cartas */
+  text-align: center;
+  border-radius: 30px;
 }
 
 .imagenPizza img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px; /* Es opcional: agrega esquinas redondeadas a las imágenes */
+  width: 100%;
+  height: auto;
+  border-radius: 50px; /* Es opcional: agrega esquinas redondeadas a las imágenes */
 }
-
 
 footer {
-    /* Propiedades para el footer */
-    background-color: #6B8E23; /* Fondo en verde albahaca */
-    color: #fff; /* Texto en color blanco para contrastar con el fondo */
-    padding: 20px; /* Ajusta el espacio interno del footer según tus necesidades */
-    text-align: center; /* Centra el texto dentro del footer */
-    margin-top: auto
+  /* Propiedades para el footer */
+  background-color: #6B8E23; /* Fondo en verde albahaca */
+  color: #fff; /* Texto en color blanco para contrastar con el fondo */
+  padding: 20px; /* Ajusta el espacio interno del footer según tus necesidades */
+  text-align: center; /* Centra el texto dentro del footer */
+  margin-top: auto;
 }
- 
+
 /* Estilos de la sección */
 #articulos {
-    display: flex;
-    flex-wrap: wrap; /* Permite que las tarjetas se muevan a la siguiente fila si no hay suficiente espacio */
-    justify-content: space-between; /* Distribuye las tarjetas uniformemente a lo largo del contenedor */
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #6B8E23;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-wrap: wrap; /* Permite que las tarjetas se muevan a la siguiente fila si no hay suficiente espacio */
+  justify-content: space-between; /* Distribuye las tarjetas uniformemente a lo largo del contenedor */
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #6B8E23;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Estilos de las tarjetas */
 .tarjeta {
-    flex: 10 10 calc(100% - 50px); /* Calcula el ancho de cada tarjeta, considerando el margen */
-    border: 1px solid black;
-    border-radius: 8px;
-    padding: 10px;
-    margin-bottom: 20px;
-    box-sizing: border-box; /* Asegura que el margen no afecte el ancho real de la tarjeta */
+  flex: 10 10 calc(100% - 50px); /* Calcula el ancho de cada tarjeta, considerando el margen */
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 20px;
+  box-sizing: border-box; /* Asegura que el margen no afecte el ancho real de la tarjeta */
 }
 
 .tarjeta img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
 
 /* Estilos para los encabezados y párrafos dentro de las tarjetas */
 .tarjeta h3, .tarjeta p {
-    font-size: larger;
-    margin: 0;
-    margin-bottom: 40px;
-}
-/* HISTORIA Y CULTURA SOBRE LA PIZZA */
-.historiaPizza1,.historiaPizza2,.historiaPizza3, .tituloHistoria {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    font-size: x-large;
-    font-style: inherit;
-    margin-bottom: 70px;
-        color: #F5DEB3;
-    
+  font-size: larger;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
+/* HISTORIA Y CULTURA SOBRE LA PIZZA */
+.historiaPizza1, .historiaPizza2, .historiaPizza3, .tituloHistoria {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  text-align: center;
+  font-size: x-large;
+  font-style: inherit;
+  margin-bottom: 70px;
+  color: #F5DEB3;
+}
 
 /* NOSOTROS */
-
 .contenedorNuestraHistoria {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra horizontalmente los elementos */
-    justify-content: center; /* Centra verticalmente los elementos */
-    text-align: center; /* Centra el texto dentro de cada elemento */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra horizontalmente los elementos */
+  justify-content: center; /* Centra verticalmente los elementos */
+  text-align: center; /* Centra el texto dentro de cada elemento */
+  margin: auto;
 }
-.nuestraHistoria, .nuestraHistoria2, .nuestraHistoria3 {
-    color: #F5DEB3;
-    font-size: 20px;
-     margin-bottom: 70px
-    
 
+.nuestraHistoria, .nuestraHistoria2, .nuestraHistoria3 {
+  color: #F5DEB3;
+  font-size: 20px;
+  margin-bottom: 70px;
 }
+
+/*# sourceMappingURL=style.css.map */
