--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,236 +1,12 @@
+@import 'reset';
 @import 'header';
 @import 'footer';
 @import 'animate.css';
-
-/*RESET CSS*/
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-a , li {
-    color: black;
-    font-size: large;
-    display: inline-block;
-    font-style:italic;
-    list-style: none;
-    text-decoration: none;
-    padding: 2px;
-}
-
-/*======================================*/
-/*INDEX*/
-/*======================================*/
-
-
-
-/*SECCION BANNER*/
-
-body {
-    /* Propiedades para la imagen de fondo */
-    background-image: url('../Images/Banner.jpg'); 
-    background-size: cover; /* Ajusta la imagen al tamaño del contenedor */
-    background-position: center; /* Centra la imagen en el contenedor */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-/*Bienvenida de la pagina*/
-.banner_titulo {
-    font-family: 'Roboto Slab', sans-serif;
-    position: relative;
-    top: 50%; /* Posiciona el título en la mitad superior del contenedor */
-    left: 50%; /* Centra el título horizontalmente en el contenedor */
-    transform: translate(-50%, 20%); /* Centra el título verticalmente y horizontalmente */
-    color: #F5DEB3; /* Color del texto */
-    text-align: center; /* Alinea el texto al centro */
-    text-shadow: 5px 5px 10px black /* Sombreado del texto */
-}
-.nuestrasPizzas {
-    color: #F5DEB3;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra horizontalmente los elementos */
-    justify-content: center; /* Centra verticalmente los elementos */
-    text-align: center; /* Centra el texto dentro de cada elemento */
-
-}
-
-/*Menu de pizzas*/
-
-.cartaPizzzas {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.imagenPizza, .textoPizza {
-    font-size: x-large;
-    text-shadow: #333;
-    background-color:rgba(0, 0, 0, 0.421);
-    color: #6B8E23;
-    width: 350px; /* Ancho deseado para cada carta de receta */
-    height: auto;
-    margin:20px; /* Espacio entre las cartas */
-    text-align: center;
-    border-radius: 30px;
-}
-
-.imagenPizza img {
-    width: 100%;
-    height: auto;
-    border-radius: 50px; /* Es opcional: agrega esquinas redondeadas a las imágenes */
-}
-
+@import 'historia';
+@import 'nosotros';
+@import 'index';
+@import 'mediaqueris';
 
 
  
-/* Estilos de la sección */
-#articulos {
-    display: flex;
-    flex-wrap: wrap; /* Permite que las tarjetas se muevan a la siguiente fila si no hay suficiente espacio */
-    justify-content: space-between; /* Distribuye las tarjetas uniformemente a lo largo del contenedor */
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #6B8E23;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
-/* Estilos de las tarjetas */
-.tarjeta {
-    flex: 10 10 calc(100% - 50px); /* Calcula el ancho de cada tarjeta, considerando el margen */
-    border: 1px solid black;
-    border-radius: 8px;
-    padding: 10px;
-    margin-bottom: 20px;
-    box-sizing: border-box; /* Asegura que el margen no afecte el ancho real de la tarjeta */
-}
-
-.tarjeta img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
-
-/* Estilos para los encabezados y párrafos dentro de las tarjetas */
-.tarjeta h3, .tarjeta p {
-    font-size: larger;
-    margin: 0;
-    margin-bottom: 40px;
-}
-/* HISTORIA Y CULTURA SOBRE LA PIZZA */
-.historiaPizza1,.historiaPizza2,.historiaPizza3, .tituloHistoria {
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    text-align: center;
-    font-size: x-large;
-    font-style: inherit;
-    margin-bottom: 70px;
-        color: #F5DEB3;
-    
-}
-
-
-/* NOSOTROS */
-
-.contenedorNuestraHistoria {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra horizontalmente los elementos */
-    justify-content: center; /* Centra verticalmente los elementos */
-    text-align: center; /* Centra el texto dentro de cada elemento */
-    margin: auto;
-}
-.nuestraHistoria, .nuestraHistoria2, .nuestraHistoria3 {
-    color: #F5DEB3;
-    font-size: 20px;
-     margin-bottom: 70px
-
-
-
-
-
-    
-
-}
-/* Estilos generales para todas las pantallas */
-
-body {
-    font-family: 'Arial', sans-serif;
-    /* Otros estilos generales */
-}
-
-/* Media query para dispositivos móviles (ej. iPhone, Android) */
-@media only screen and (max-width: 767px) {
-    body {
-        font-size: 15px;
-    }
-
-    .header {
-        font-size: 10px;
-        padding: 10px;
-        text-align: center;
-    }
-
-    .menu {
-        display: block;
-    }
-
-    .main-content {
-        width: 100%;
-    }
-}
-
-
-/* Media query para tablets (ej. iPad) */
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-    body {
-        font-size: 18px;
-    }
-    .imagenPizza {
-        font-size: 18px;
-    }
-    .header {
-        font-size: 10px;
-        padding: 10px;
-        text-align: center;
-    }
-
-    .menu {
-        display: block;
-    }
-
-    .main-content {
-        width: 100%;
-    }
-}
-
-
-
-/* Media query para pantallas más grandes (escritorio) */
-@media only screen and (min-width: 1025px) {
-    body {
-        font-size: 25px;
-    }
-    .imagenPizza{
-        font-size: 25px;
-    }
-    .header {
-        padding: 10px;
-        text-align: center;
-    }
-
-    .menu {
-        display: block;
-    }
-
-    .main-content {
-        width: 100%;
-    }
-}
