--- a/css/style.css
+++ b/css/style.css
@@ -17,32 +17,6 @@ a, li {
   padding: 2px;
 }
 
-/*HEADER Y NAV*/
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around; /* Distribuye los elementos a lo largo del eje principal (horizontal) */
-  align-items: center; /* Alinea los elementos al centro del eje transversal (vertical) */
-  padding: 10px; /* Añade algún relleno para mayor espacio alrededor del logo y la navegación */
-}
-
-header img {
-  width: 200px; /* Ajusta el tamaño del logo según tus preferencias */
-  height: auto; /* Mantiene la proporción del logo */
-}
-
-header {
-  height: 100px;
-  text-align: center;
-  background-color: #FF6347; /* Fondo en rojo tomate */
-}
-
-header nav ul li a:hover {
-  color: bisque;
-  font-size: 15px;
-  margin-left: 10px;
-}
-
 /*FOOTER*/
 footer {
   background-color: #6B8E23; /* Fondo en verde albahaca */
@@ -173,6 +147,11 @@ body {
   font-size: larger;
   margin: 0;
   margin-bottom: 40px;
+}
+
+.carousel-inner, .carousel-inner {
+  display: flex;
+  padding: 77px;
 }
 
 /* Estilos generales para todas las pantallas */
