--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,8 @@ body {
 
 .carousel-inner, .carousel-inner {
   display: flex;
-  padding: 77px;
+  padding: 100px;
+  
 }
 
 /* Estilos generales para todas las pantallas */
@@ -218,3 +219,138 @@ body {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
+/*Cards */
+.shop-content {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 50px;
+  margin-left: 80px;
+  margin-right: 80px;
+
+}
+.card {
+  border: 1px solid #dbdbdb; /* Añadir un borde opcional */
+  border-radius: 10px; /* Añadir bordes redondeados opcionalmente */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra opcional */
+ margin: 7px;
+}
+
+.shop-content img {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  height: 200px;
+ 
+}
+
+.price {
+  color: green;
+  font-size: 22px;
+  text-align: center;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: black;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 1.2;
+  color:lawngreen;
+}
+
+.nav-item {
+  color: white;
+  font-size: 20px;
+}
+
+.modal-container {
+  width: 80%;
+  margin: 0 10%;
+  max-height: 88vh;
+  color: white;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*for the top*/
+  position: fixed;
+  overflow: auto;
+  z-index: 9;
+  top: 12vh;
+  scrollbar-color: none;
+}
+
+/* para no mostrar la barra de scroll */
+.modal-container::-webkit-scrollbar {
+  display:list-item;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-around;
+  background-color:black;
+  color: white;
+  width: 100%;
+}
+
+.modal-header-title {
+  justify-self: start;
+  font-size: 25px;
+}
+
+.modal-header-button {
+  cursor: pointer;
+}
+
+.modal-container > .modal-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 70%;
+  margin: 10px;
+  background-color: black;
+}
+
+.modal-container >div>img{
+  height: 120px;
+  width: 120px;
+}
+
+.total-content{
+  font-size: 25px;
+  padding: 20px;
+  text-align: center;
+  padding-top:20px ;
+}
+
+.delete-product{
+  cursor: pointer;
+}
+
+.cantidad-carrito {
+  background-color: green;
+  color: white;
+  border-radius: 25%;
+  font-size: 12px;
+  padding: 4px;
+  top: 37px;
+  right: 14px;
+  position: absolute;
+  display: none;
+}
+
+.sumar, .restar {
+  cursor: pointer;
+}
