--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
-/*RESET CSS*/
-@import 'animate.css';
+/*@import 'animate.css';*/  
 * {
   margin: 0;
   padding: 0;
@@ -64,6 +63,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  
 }
 
 /*Bienvenida de la pagina*/
@@ -234,7 +234,7 @@ body {
 .card {
   border: 1px solid #dbdbdb; /* Añadir un borde opcional */
   border-radius: 10px; /* Añadir bordes redondeados opcionalmente */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra opcional */
+  box-shadow: 5px 5px 10px 7px #000000;
  margin: 7px;
 }
 
@@ -279,7 +279,7 @@ body {
   margin: 0 10%;
   max-height: 88vh;
   color: white;
-  background-color: black;
+  background: radial-gradient(#6B8E23 0%, #000000 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -289,14 +289,17 @@ body {
   z-index: 9;
   top: 12vh;
   scrollbar-color: none;
+  
 }
 
 /* para no mostrar la barra de scroll */
 .modal-container::-webkit-scrollbar {
   display:list-item;
+  
 }
 
 .modal-header {
+  
   display: flex;
   justify-content: space-around;
   background-color:black;
@@ -342,7 +345,7 @@ body {
 .cantidad-carrito {
   background-color: green;
   color: white;
-  border-radius: 25%;
+  border-radius: 20%;
   font-size: 12px;
   padding: 4px;
   top: 37px;
