--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,9 @@ body {
   justify-content: space-evenly;
   align-items: center;
 }
-
+.imglogo{
+  border-radius: 20px;
+}
 .imagenPizza, .textoPizza {
   font-size: x-large;
   text-shadow: #333;
@@ -231,13 +233,15 @@ body {
   margin-top: 50px;
   margin-left: 80px;
   margin-right: 80px;
-background-color: #000000;
+background-color: #000000bd;
+padding: 5vh;
+border-radius: 7vh;
 }
-.card {
-  border: 1px solid #dbdbdb; /* Añadir un borde opcional */
-  border-radius: 10px; /* Añadir bordes redondeados opcionalmente */
-  box-shadow: 5px 5px 10px 7px #000000;
- margin: 7px;
+.card { /* Añadir un borde opcional */
+  border-radius: 20px; /* Añadir bordes redondeados opcionalmente */
+  box-shadow: 5px 5px 10px 7px #c7880090;
+ margin-top: 2vh;
+ margin-bottom: 2vh;
  background-color: #000000;
 }
 
@@ -245,7 +249,7 @@ background-color: #000000;
   display: flex;
   flex-wrap: wrap;
   max-width: 100%;
-  height: 180px;
+  height: 20vh;
   background-color: #000000;
 }
 
@@ -281,7 +285,7 @@ background-color: #000000;
 .modal-container {
   width: 80%;
   margin: 0 10%;
-  max-height: 90vh;
+  max-height: 88vh;
   color: rgb(255, 255, 255);
   background-image: url("../Images/wooden-background.jpg");
   display: flex;
@@ -291,9 +295,9 @@ background-color: #000000;
   position: fixed;
   overflow: auto;
   z-index: 9;
-  top: 3vh;
+  top: 5vh;
   scrollbar-color:  rgb(0, 0, 0) rgba(128, 128, 128, 0);
-  border: solid rgba(250, 128, 114, 0.261) 2vh;
+  
 }
 
 /* para no mostrar la barra de scroll */
@@ -305,12 +309,12 @@ background-color: #000000;
 .modal-header {
   display: flex;
   justify-content: space-around;
-  background-color:rgba(0, 0, 0, 0.753);
+  background-color:rgba(0, 0, 0, 0.817);
   color: rgb(255, 255, 255);
   width: 100%;
   margin-left: 2vh;
   border-radius: 30px;
-  border: groove rgba(244, 165, 96, 0.582) 20px;
+  border: groove rgba(141, 66, 0, 0.693) 20px;
   padding-top: 10px;
 }
 
@@ -321,7 +325,7 @@ background-color: #000000;
 
 .modal-header-button {
   cursor: pointer;
-  
+
 }
 
 .modal-container > .modal-content {
@@ -331,7 +335,8 @@ background-color: #000000;
   align-items: center;
   width: 70%;
   margin: 10px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.697);
+  border-radius: 30px;
 }
 
 .modal-container >div>img{
@@ -366,9 +371,17 @@ background-color: #000000;
   cursor: pointer;
 }
 
-#carouselExampleCaptions{
-  display: flex;
-  padding-bottom: 6vh;
-  margin-left: 12vh;
-  margin-right: 12vh;
+
+
+#footer1{
+  border-radius: 30px;
+  border: outset rgb(31, 50, 0) 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #000000;
+  font-size: 1,2vh;
+}
+
+.popup{
+  border-radius: 40px;
+  border: solid rgba(118, 0, 0, 0.689) 5px;
 }
