--- a/css/style.css
+++ b/css/style.css
@@ -103,12 +103,13 @@ body {
   font-size: x-large;
   text-shadow: #333;
   background-color: rgba(0, 0, 0, 0.421);
-  color: #6B8E23;
+  color: #ffffffc4;
   width: 350px; /* Ancho deseado para cada carta de receta */
   height: auto;
   margin: 20px; /* Espacio entre las cartas */
   text-align: center;
   border-radius: 30px;
+  border: solid rgba(167, 109, 9, 0.54) 5px;
 }
 
 .imagenPizza img {
@@ -323,7 +324,7 @@ border-radius: 7vh;
   font-size: 18px;
 }
 
-.modal-header-button {
+.modal-header-button {    
   font-size:small;
   cursor: pointer;
   padding: 4px;
@@ -341,6 +342,7 @@ border-radius: 7vh;
   margin: 10px;
   background-color: rgba(0, 0, 0, 0.697);
   border-radius: 30px;
+  border: solid rgba(245, 245, 245, 0.406) 4px;
 }
 
 .modal-container >div>img{
